--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,18 @@
   "description": "All you need on new tab",
   "author": "Anurag Deore",
   "chrome_url_overrides": {
-    "newtab": "newtab.html"
+    "newtab": "./newtab/newtab.html"
   },
   "omnibox": { "keyword": "nt" },
   "action": {
     "default_popup": "./popup/popup.html"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["./scripts/content.js"]
+    }
+  ],
   "options_page": "./options/options.html",
   "permissions": ["storage", "bookmarks", "contextMenus", "activeTab", "tabs"],
   "host_permissions": ["https://dev.to/api/articles"],
